iptables.conf
# Generated by iptables-save v1.6.1 on Tue Mar 26 16:21:33 2019
*nat
:PREROUTING ACCEPT [72:5760]
:INPUT ACCEPT [1:60]
:OUTPUT ACCEPT [4:336]
:POSTROUTING ACCEPT [18:1200]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A POSTROUTING -o eth0 -j MASQUERADE
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:45515
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:51490
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 45515 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 51490 -j SNAT --to-source :53
COMMIT
# Completed on Tue Mar 26 16:21:33 2019
# Generated by iptables-save v1.6.1 on Tue Mar 26 16:21:33 2019
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [64:4608]
-A INPUT -s 192.168.100.3/32 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -o eth0 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -d 192.168.100.0/24 -i eth0 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -d 192.168.200.0/24 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -d 192.168.200.0/24 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -s 192.168.200.0/24 -d 192.168.100.0/24 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A FORWARD -s 192.168.200.0/24 -d 192.168.100.0/24 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -o eth0 -p tcp -m tcp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -o eth0 -p udp -m udp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.100.0/24 -i eth0 -p tcp -m tcp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.100.0/24 -i eth0 -p udp -m udp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -o eth0 -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -o eth0 -p tcp -m tcp --dport 8080 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.100.0/24 -i eth0 -p tcp -m tcp --sport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.100.0/24 -i eth0 -p tcp -m tcp --sport 8080 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.100.0/24 -i eth0 -p tcp -m tcp --sport 443 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -o eth0 -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.200.3/32 -d 192.168.100.0/24 -p tcp -m tcp --sport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.100.0/24 -d 192.168.200.3/32 -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.200.3/32 -i eth0 -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.200.3/32 -o eth0 -p tcp -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.100.3/32 -d 192.168.200.3/32 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.200.3/32 -d 192.168.100.3/32 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -d 192.168.100.3/32 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
COMMIT
# Completed on Tue Mar 26 16:21:33 2019
